vpc/vpc.tf
resource "aws_vpc" "vpc" {
  cidr_block           = local.cidr_block
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = "cicd-epam-hw-vpc"
  }
}
